# JustNoise

./: .env.example  .gitignore  AGENTS.md  COMPLETION_CHECKLIST.md  GET_STARTED_VAD_GRACE.md  GRACE_PERIOD_VISUAL.md  IMPLEMENTATION_SUMMARY.txt  LICENSE  MICROPHONE_GAIN.md  MIC_GAIN_QUICK_START.md  PCM_CAPTURE_FIXED.md  PCM_CAPTURE_QUICK_REF.md  PCM_CAPTURE_SUMMARY.md  QUICK_START_RAW_PCM.md  QUICK_VAD_GRACE.md  RAW_PCM_REFACTOR.md  README.md  REFACTOR_REFERENCE.sh  VAD_GRACE_CHANGES.md  VAD_GRACE_PERIOD_GUIDE.md  VOLUME_COMMAND_SYNTAX.md  VOLUME_CONTROL.md  VOLUME_CONTROL_QUICK_START.md  justfile  pyproject.toml
arduino/: flashwifi.ino
arduino/mictest/: README.md  mictest.ino  platformio.ini  wav_recorder.ino
arduino/mictest/src/: main.cpp
arduino/sketch_oct24a/: sketch_oct24a.ino
docs/: PCM_CAPTURE.md  RAW_PCM_STREAMING.md
esp32/firmware/: platformio.ini
esp32/firmware/src/: main.cpp
peaks/: recording_i2s_32bit_left.wav.reapeaks  recording_pdm.wav.reapeaks  test_recording.wav.reapeaks
pi-aggregator/: README.md  VAD_README.md  aggregator.py  requirements.txt  vad.py
pi-decision/: README.md  decision.py  requirements.txt  train.py
scripts/: capture_pcm.py  capture_wav.py  mic_gain_control.py  publish_sample.py  tcp_audio_server.py  test_vad.py  vad_monitor.py  vad_stream.py
shared/mqtt/: topics.md
shared/mqtt/schemas/: audio_features.schema.json  env.schema.json  pir.schema.json  vad.schema.json  vad_event.schema.json
shared/utils/: config.py
