[project]
name = "justnoise"
version = "0.1.0"
description = "Classroom Occupancy and Noise Analytics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "paho-mqtt",
    "numpy",
    "pandas",
    "python-dateutil",
    "python-dotenv",
    "scikit-learn",
    "joblib",
    "pyserial",
]

[project.optional-dependencies]
vad = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "ruff",
]
